--- a/app/assets/stylesheets/app_design.css
+++ b/app/assets/stylesheets/app_design.css
@@ -679,7 +679,7 @@ div.atividades_table tfoot tr td {text-align: right;}
   padding: 1em;
   margin-left: 1em auto;
   width: 130px;
-  background-color: #ffc;
+  background-color: #FFF;
 }
 
 .round {
