--- a/app/views/avaliadores/registrations/edit.html.erb
+++ b/app/views/avaliadores/registrations/edit.html.erb
@@ -3,9 +3,7 @@
 <strong>
   <p>
     <font size="5" color="red">*</font>
-    <label>
-      &nbsp <%= t('form_messages.requiredfields')%>
-    </label>
+      <%= label_tag I18n.t('form_messages.requiredfields')%>
   </p>
 </strong>
 
@@ -22,18 +20,18 @@
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
 
+  <%= f.label :nome %><br />
   <div class="session">
-    <%= f.label :nome %><br />
     <%= f.text_field :nome %>
     <%= error_tag @avaliador, :nome %>
   </div>
+  <%= f.label :matricula %><br />
   <div class="session">
-    <%= f.label :matricula %><br />
     <%= f.text_field :matricula %>
     <%= error_tag @avaliador, :matricula %>
-  </div><br />
+  </div>
+  <%= f.label :titulacao %><br />
   <div class="session">
-    <%= f.label :titulacao %><br />
      <%= f.text_field :titulacao %>
     <%= error_tag @avaliador, :titulacao %>
   </div>
