^^ Ajuste na listagem de atividades -- em avaliadores ^^

--- a/app/views/avaliacoes/_listagem_de_atividades_do_aluno_x.html.erb
+++ b/app/views/avaliacoes/_listagem_de_atividades_do_aluno_x.html.erb
@@ -55,10 +55,15 @@
                 <% end %>
               </center></td>
 
-              <% unless atividade.comprovante.nil? %>
+              <% if atividade.comprovante.path.nil? %>
                   <center><TD><%= t('messages.without_receipt')%></TD></center>
               <% else %>
-                  <td><center><%= link_to "#{image_tag("samples/pdf-icon.png",:width=>"60",:height=>"50",:alt=>"Ver Comprovante")}".html_safe, "atividade.comprovante"%></center>
+                  <td>
+                    <center>
+                      <a href = "<%= atividade.comprovante %>" alt="Anexar Comprovante">              
+                        <%= image_tag("fallback/pdf-icon.png", :width=>"60",:height=>"50", :alt=>"Ver Comprovante") %>
+                      </a>
+                    </center>
                   </td>
               <%-end-%>
 
