--- a/app/views/avaliadores/status.html.erb
+++ b/app/views/avaliadores/status.html.erb
@@ -45,9 +45,9 @@
   <br /></FIELDSET>
   
   <div class="botao_left">
-      <%= f.submit t('links.send'), :class=>"botaoVerde", :id=>'id_botao' %>
+      <%= f.submit t('links.send'), :class=>"btn btn-success btn-large", :id=>'id_botao' %>
   </div>
   <div class="botao_left">
-    <%= link_to t('links.back'), total_avaliadores_path, :class=>"botaoVerde", :id=>'id_botao' %>
+    <%= link_to t('links.back'), total_avaliadores_path, :class=>"btn btn-success btn-large", :id=>'id_botao' %>
   </div>
 <% end %>
