--- a/app/views/avaliadores/new.html.erb
+++ b/app/views/avaliadores/new.html.erb
@@ -1,11 +1,9 @@
 <BR />
 <strong>
-  <p>
-    <font size="5" color="red">*</font>
-    <label>
-      &nbsp <%= t('form_messages.requiredfields')%>
-    </label>
-  </p>
+	<LABEL class='radio'>
+		<%= t 'avaliadores.list_avaliators.new'%>
+	</LABEL>
 </strong>
-
+<BR />
+<BR />
 <%= render 'form' %>
