--- a/app/views/avaliadores/index.html.erb
+++ b/app/views/avaliadores/index.html.erb
@@ -1,7 +1,7 @@
-<BR /><BR />
+<BR /><BR /><BR /><BR />
 <div class="button">
 <fieldset class='toplevel'>
-    <legend ><%= label_tag t('.signed_in') %></legend>
+    <legend><strong><%= label_tag t('.signed_in') %></legend></strong>
       <div id="facemenu">
         <ul> 
           <li>
