--- a/app/views/avaliadores/registrations/edit.html.erb
+++ b/app/views/avaliadores/registrations/edit.html.erb
@@ -1,12 +1,9 @@
 <% @user = current_avaliador.nome %>
 <Br />
 <strong>
-  <p>
-    <font size="5" color="red">*</font>
-      <%= label_tag I18n.t('form_messages.requiredfields')%>
-  </p>
+  <%= label_tag I18n.t('avaliadores.edit.profile', :name=> @user) %>
 </strong>
-<Br />
+<Br /><Br />
 
 <% if resource.errors.any? %>
   <div id="error_explanation" class="alert">
@@ -16,36 +13,43 @@
 
 <FIELDSET>
     <LEGEND>
-    <h2><%= label_tag I18n.t('avaliadores.edit.profile', :name=> @user) %></h2>
+    <h2><label><font size="5" color="red">*</font>&nbsp<%= t('form_messages.requiredfields')%></label></h2>
     </LEGEND>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
 
-  <%= f.label :nome %><br />
-  <div class="session">
+  <div class="control-group">
+    <%= f.label :nome %>
     <%= f.text_field :nome %>
     <%= error_tag @avaliador, :nome %>
   </div>
-  <%= f.label :matricula %><br />
-  <div class="session">
+      
+  <div class="control-group">
+    <%= f.label :matricula %>
     <%= f.text_field :matricula %>
     <%= error_tag @avaliador, :matricula %>
   </div>
-  <%= f.label :titulacao %><br />
-  <div class="session">
-     <%= f.text_field :titulacao %>
+
+  <div class="control-group">
+    <%= f.label :titulacao %>
+    <%= f.text_field :titulacao %>
     <%= error_tag @avaliador, :titulacao %>
   </div>
-  
-  <div class="field">
-    <%= f.label :sexo %>
-    <DIV class="radio_component">
-          <%= f.radio_button :sexo, t('labels._masc') %>
-          <label id="ident">&nbsp<%= t('labels._masc') %></label><BR />
-          <%= f.radio_button :sexo, t('labels._feme') %>
-          <label id="ident">&nbsp<%= t('labels._feme') %></label>
+    
+  <div class="control-group">
+      <%= f.label :sexo %>
+      <div class="controls">
+        <DIV class="radio_component">
+          <label class="radio">
+            <%= f.radio_button :sexo, t('labels._masc') %><%= label_tag t('labels._masc') %>
+          </label>
+
+          <label class="radio">
+            <%= f.radio_button :sexo, t('labels._feme') %><%= label_tag t('labels._feme') %>
+          </label>
           <%= error_tag @avaliador, :sexo %>
-    </DIV>
+        </DIV>
+      </div>
   </div>
 
   <b><%= f.label t('avaliadores.profileimage.changeImage') %></b><BR />
@@ -55,34 +59,31 @@
        <%= error_tag @avaliador, :image %>
   </div>
 
-  <div class="session">
+  <div class="control-group">
       <%= f.label :email %>
       <%= f.email_field :email, :placeholder => "example@example.com" %>
       <%= error_tag(@avaliador, :email)%>
   </div>
 
-  <div class="session">
+  <div class="control-group">
       <%= f.label :password %>
       <i id="blue" class="small"><%= t('form_messages.password_message') %></i><BR />
       <%= f.password_field :password, :placeholder => t('form_messages.password') %>
       <%= error_tag(@avaliador, :password)%>
   </div>
 
-  <%= f.label :password_confirmation %>
-  <div class="session">
+  <div class="control-group">
+    <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation, :placeholder => t('form_messages.password') %>
      <%= error_tag(@avaliador, :password_confirmation)%>
   </div>
 
-  <%= f.label :current_password %>
-  <div class="session">
-      <%= f.password_field :current_password %>
-      <%= error_tag(@avaliador, :current_password)%>
-  </div><BR />
-
-
-
-</FIELDSET>  
+  <div class="control-group">
+    <%= f.label :current_password %>
+    <%= f.password_field :current_password %>
+    <%= error_tag(@avaliador, :current_password)%>
+  </div>
+</FIELDSET><BR /><BR /><BR />
 <div class="botao_left">
     <%= f.submit t('links.send'), :class=>"btn btn-success btn-large", :id=>'id_botao' %>
 </div>
@@ -90,3 +91,8 @@
     <%= link_to t('links.back'), avaliadores_index_path, :class=>"btn btn-success btn-large", :id=>'id_botao' %>
 </div>
 <% end %>
+
+<SCRIPT TYPE="text/javascript">
+  $('input[type=file]').bootstrapFileInput();
+  $('.file-inputs').bootstrapFileInput();
+</SCRIPT>
