--- a/app/views/avaliadores/_alunos.html.erb
+++ b/app/views/avaliadores/_alunos.html.erb
@@ -1,15 +1,23 @@
-<BR /><BR /><BR />
+<fieldset>
 <% @alunos.each do |aluno| %>
-  <DIV>
-    <%= image_tag aluno.image.url, :width=> 100, :height => 140 %>
-    <% if avaliador_signed_in? and current_avaliador.admin %>
-      <%= link_to aluno.nome, listagem_de_atividades_do_aluno_x_path(aluno.id),:id =>aluno %>
-    <% elsif avaliador_signed_in? and current_avaliador.admin == false %>
-      <%= link_to aluno.nome, "/atividades_de/#{aluno.nome}/#{aluno.id}",:id =>aluno %>
-    <%- end -%>
-    <BR /><BR />
-  </DIV>
-<% end %>
+  <table id="nav">
+    <th id="nav">    
+      <div class="wp-caption wrap">
+        <center>
+          <%= image_tag aluno.image.url, :width=> 140, :height => 140 %>
+          <p class="wp-caption-text">
+            <% if avaliador_signed_in? and current_avaliador.admin %>
+              <%= link_to aluno.nome, listagem_de_atividades_do_aluno_x_path(aluno.id),:id =>aluno %>
+            <% elsif avaliador_signed_in? and current_avaliador.admin == false %>
+              <%= link_to aluno.nome, "/atividades_de/#{aluno.nome}/#{aluno.id}",:id =>aluno %>
+            <%- end -%>
+          </p>
+        </center>
+    </div>
+  </th>
+</table>   
+<% end %>    
+</fieldset>
 
 <div class="flickr_pagination">
 	<div clas="page_info">
