--- a/app/views/avaliadores/status.html.erb
+++ b/app/views/avaliadores/status.html.erb
@@ -6,44 +6,60 @@
   </div>
 <% end %>
 <FIELDSET>
-<LEGEND><h1><%= label_tag(t('.title')) %></h1></LEGEND>
+<LEGEND><h1><strong><%= label_tag(t('.title')) %></strong></h1></LEGEND>
 
 <%= form_for(@avaliador, :url=>{:action=>'update_status'}) do |f| %>
-  <div class="field">
-    <%= f.label :nome %><br />
+  <div class="control-group">
+    <%= f.label :nome %>
     <%= f.text_field :nome,:readonly=>:false %>
     <%= error_tag @avaliador, :nome %>
   </div>
   
-  <div class="field">
-    <%= f.label :matricula %><br />
+  <div class="control-group">
+    <%= f.label :matricula %>
     <%= f.text_field :matricula,:readonly=>:false %>
     <%= error_tag @avaliador, :matricula %>
   </div>
   
-  <div class="field">
-    <%= f.label :titulacao %><br />
+  <div class="control-group">
+    <%= f.label :titulacao %>
      <%= f.text_field :titulacao,:readonly=>:false %>
     <%= error_tag @avaliador, :titulacao %>
   </div>
-  
-  <div class="field">
-    <%= f.label :admin %><br />
-    <DIV class="radio_component">
-      <%= f.radio_button :admin, 1 %><label id="ident">&nbsp<%= t('labels._yes')%></label>
-      <%= f.radio_button :admin, 0 %><label id="ident">&nbsp<%= t('labels._no')%></label>
-    </DIV>
+
+  <div class="control-group">
+      <%= f.label :status %>
+      <div class="controls">
+        <DIV class="radio_component">
+          <label class="radio">
+            <%= f.radio_button :status, 1 %><%= label_tag t('labels._on') %>
+          </label>
+
+          <label class="radio">
+            <%= f.radio_button :status, 0 %><%= label_tag t('labels._off') %>
+          </label>
+          <%= error_tag @avaliador, :status %>
+        </DIV>
+      </div>
   </div>
 
-  <div class="field">
-    <%= f.label :status %><br />
-    <DIV class="radio_component">
-      <%= f.radio_button :status, 1 %><label id="ident">&nbsp<%= t('labels._on')%></label>
-      <%= f.radio_button :status, 0 %><label id="ident">&nbsp<%= t('labels._off')%></label>
-    </DIV>
+  <div class="control-group">
+      <%= f.label :admin %>
+      <div class="controls">
+        <DIV class="radio_component">
+          <label class="radio">
+            <%= f.radio_button :admin, 1 %><%= label_tag t('labels._on') %>
+          </label>
+
+          <label class="radio">
+            <%= f.radio_button :admin, 0 %><%= label_tag t('labels._off') %>
+          </label>
+          <%= error_tag @avaliador, :admin %>
+        </DIV>
+      </div>
   </div>
   <br /></FIELDSET>
-  
+  <BR /><BR /><BR />
   <div class="botao_left">
       <%= f.submit t('links.send'), :class=>"btn btn-success btn-large", :id=>'id_botao' %>
   </div>
