^^ Ajuste na view new atividade em Atividade -- ViewModel ^^

--- a/app/views/alunos/index.html.erb
+++ b/app/views/alunos/index.html.erb
@@ -1,7 +1,7 @@
 <BR /><BR />
 <div class="button">
-<fieldset class='toplevel'>
-    <legend ><%= label_tag t('.signed_in') %></legend>
+<FIELDSET>
+  <LEGEND><h1><STRONG><label><%= label_tag t('.signed_in') %></label></h1></LEGEND></STRONG>
       <div id="facemenu">
         <ul> 
           <li>
