--- a/app/views/alunos/password.html.erb
+++ b/app/views/alunos/password.html.erb
@@ -4,27 +4,24 @@
   </div>
 <% end %>
 
-<FIELDSET>
-    <LEGEND><H1><label><%= t('alunos.password.edit') %></label></H1></LEGEND>
-
+<FIELDSET><LEGEND><STRONG><H1><label><%= t('alunos.password.edit') %></label></H1></LEGEND></STRONG>
 <%= form_for(@aluno, :url=>{:action=>'changepassword'}, :html => { :method => :put }) do |f| %>
      
-
-    <div class="field">
-        <%= f.label :password %><br />
-        <i id="blue" class="small"><%= t('alunos.password.leave_if_you_dont_wanna_change') %></i><BR />
+    <div class="control-group">
+        <%= f.label :password %>
+        <i id="blue"><%= t('alunos.password.leave_if_you_dont_wanna_change') %></i><BR />
         <%= f.password_field :password %>
         <%= error_tag @aluno, :password %>
     </div>
 
-    <div class="field">
-      <%= f.label :password_confirmation %><br />
+    <div class="control-group">
+      <%= f.label :password_confirmation %>
       <%= f.password_field :password_confirmation %>
       <%= error_tag @aluno, :password_confirmation %>
     </div>
 
-    <div class="field">
-      <%= f.label :current_password %><br />
+    <div class="control-group">
+      <%= f.label :current_password %>
       <%= f.password_field :current_password %>
       <%= error_tag @aluno, :current_password %>
     </div>
@@ -32,10 +29,10 @@
     <br>
     <br></FIELDSET>
     <div class="botao_left">
-        <%= f.submit t('alunos.profileimage.send'), :class=>"botaoVerde", :id=>'id_botao' %>
+        <%= f.submit t('alunos.profileimage.send'), :class=>"btn btn-success btn-large", :id=>'id_botao' %>
     </div>
     
     <div class="botao_left">
-      <%= link_to t('links.back'), aluno_index_path, :class=>"botaoVerde", :id=>'id_botao' %>
+      <%= link_to t('links.back'), aluno_index_path,:class=>"btn btn-success btn-large", :id=>'id_botao' %>
     </div>
 <%- end -%>
